--- a/css/nav.css
+++ b/css/nav.css
@@ -3,3 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 768px) {
+    .nav__lists {
+        display: none;
+    }
+}
