--- a/css/nav.css
+++ b/css/nav.css
@@ -56,6 +56,10 @@
     position: relative;
 }
 
+.nav__sublist1 > a i:last-child {
+    margin-right: auto;
+}
+
 .nav__sublist1:hover > ul.nav__sublists2 {
     transform: scale(1);
 }
@@ -77,6 +81,11 @@
     transform: scale(0);
     transition: all 0.3s ease-in-out;
     margin-top: 13px;
+}
+
+.nav__sublists1 i {
+    margin-left: 1rem;
+    color: #457b9d;
 }
 
 /*Sublists2 ul*/
