--- a/css/nav.css
+++ b/css/nav.css
@@ -1,33 +1,26 @@
-/*L1 lists ul*/
+/* l1 Lists ul */
 .nav__lists {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
-    .nav__lists {
-        display: none;
-    }
-}
-
-/*L1 list li*/
+/* l1 list li */
 .nav__list {
     position: relative;
-    display: block;
-    padding: 1.3rem;
-    transition: all 0.3s ease-in-out;
 }
 
 .nav__list:hover > ul.nav__sublists1 {
     transform: scale(1);
 }
 
-/*L1 link a*/
+/* l1 link a */
 .nav__link {
-    padding: 1.3rem;
     position: relative;
-    transition: all 0.3s ease-in-out;
+    display: block;
+    padding: 1.3rem;
+    transition: all 0.3s ease;
 }
 
 .nav__link:hover {
@@ -37,27 +30,42 @@
 .nav__link::after {
     content: "";
     position: absolute;
-    width: 0%;
     bottom: 0;
     left: 50%;
-    border-radius: 0.5rem;
+    width: 0%;
     height: 3px;
     background-color: #0d62da;
+    border-radius: 0.5rem;
     transform: translateX(-50%);
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease;
 }
 
 .nav__link:hover::after {
     width: 100%;
 }
 
+/* sublists1 ul */
+.nav__sublists1,
+.nav__sublists2 {
+    position: absolute;
+    width: 20rem;
+    background-color: white;
+    border-top: 0.3rem solid #e76f51;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 4px rgb(61, 61, 61);
+    transform: scale(0);
+    transform-origin: top right;
+    transition: all 0.3s ease;
+}
+
+.nav__sublists1 i {
+    margin-left: 1rem;
+    color: #457b9d;
+}
+
 /* sublist1 li*/
 .nav__sublist1 {
     position: relative;
-}
-
-.nav__sublist1 > a i:last-child {
-    margin-right: auto;
 }
 
 .nav__sublist1:hover > ul.nav__sublists2 {
@@ -68,27 +76,7 @@
     margin-right: auto;
 }
 
-/*Sublists1 ul*/
-.nav__sublists1,
-.nav__sublists2 {
-    position: absolute;
-    width: 20rem;
-    background-color: #fff;
-    border-top: 0.3rem solid #e76f51;
-    border-radius: 0.3rem;
-    box-shadow: 0 0 4px rgba(61, 61, 61);
-    transform-origin: top right;
-    transform: scale(0);
-    transition: all 0.3s ease-in-out;
-    margin-top: 13px;
-}
-
-.nav__sublists1 i {
-    margin-left: 1rem;
-    color: #457b9d;
-}
-
-/*Sublists2 ul*/
+/* sublists2 ul*/
 .nav__sublists2 {
     right: 100%;
     top: 0;
@@ -109,24 +97,102 @@
     color: #0d62da;
 }
 
-/*Arrow*/
+/* Arrow */
 .nav__arrow {
     position: absolute;
     top: 40%;
     left: 0;
-    width: 7px;
-    height: 7px;
+    width: 0.7rem;
+    height: 0.7rem;
     border: 1px solid #3c4858;
     border-width: 0 1px 1px 0;
     transform: rotate(45deg);
-    transition: all 0.5s ease-in-out;
+    transition: all 0.6s ease;
 }
 
 .nav__link:hover > span {
     transform: rotate(225deg);
 }
 
-/*Burger Menu*/
+/* Mega menu */
+.nav__mega {
+    position: static;
+}
+
+.nav__mega:hover > .nav__mega-content {
+    transform: scale(1, 1);
+}
+
+.nav__mega-content {
+    position: absolute;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+    white-space: nowrap;
+    background-image: conic-gradient(#98d6f3, #fea2b1, #f7f1fa, #98d6f3);
+    border-top: 0.3rem solid #e76f51;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 4px rgb(61, 61, 61);
+    transform: scale(1, 0);
+    transform-origin: top;
+    transition: all 0.3s ease;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+    .nav__mega-content {
+        width: 67rem;
+    }
+}
+
+.nav__mega-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.nav__mega-lists {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__mega-column > h4 {
+    padding: 2rem;
+    border-bottom: 0.3rem solid #e76f51;
+}
+
+.nav__mega-column > .nav__button {
+    align-self: center;
+}
+
+.nav__mega-lists a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem;
+    color: #444;
+}
+
+.nav__mega-lists a:hover {
+    color: #0d62da;
+}
+
+.nav__mega-lists i {
+    margin-left: 0.5rem;
+    transition: all 0.3s ease;
+}
+
+.nav__mega-lists a:hover > i {
+    color: #444;
+    transform: rotate(1turn);
+}
+
+/* Burger menu */
 .nav__burger-label {
     display: flex;
     flex-direction: column;
@@ -146,7 +212,7 @@
 .nav__burger-label > span {
     height: 0.5rem;
     border-radius: 0.5rem;
-    background: #2196f3;
+    background-color: #2196f3;
     transition: all 0.3s cubic-bezier(0.39, -0.69, 0.59, 1.54);
 }
 
@@ -168,7 +234,7 @@
     transform: rotate(45deg) translate(-1rem, 1.6rem);
 }
 
-.nav__burger-checkbox:checked ~ .nav__burger-label > span:nth-child(2) {
+.nav__burger-checkbox:checked + .nav__burger-label > span:nth-child(2) {
     transform: rotate(-45deg);
 }
 
@@ -179,4 +245,64 @@
 
 .nav__burger-checkbox {
     display: none;
+}
+
+/* Responsive */
+
+@media only screen and (max-width: 768px) {
+    .nav__mobile-wrap {
+        position: fixed;
+        top: 9.2rem;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        z-index: 100;
+        display: none;
+        width: 100vw;
+        height: auto;
+        background-color: #edfcff;
+    }
+
+    .nav__burger-checkbox:checked ~ .nav__mobile-wrap {
+        display: block;
+    }
+
+    .nav__link {
+        width: calc(100vw - 3rem);
+    }
+
+    .nav__lists {
+        flex-direction: column;
+    }
+
+    .nav__list:not(:last-child) {
+        border-bottom: 1px solid #ccc;
+    }
+
+    .nav__sublists1,
+    .nav__sublists2,
+    .nav__mega-content {
+        /* Reset settings */
+        position: relative;
+        right: 0;
+        display: none;
+        width: 100%;
+        margin-right: 2rem;
+        border: none;
+        background: none;
+        box-shadow: none;
+        transform: scale(1);
+    }
+
+    .nav__list:hover > .nav__sublists1,
+    .nav__sublist1:hover > .nav__sublists2,
+    .nav__mega:hover > .nav__mega-content {
+        display: block;
+    }
+
+    .nav__mega-column {
+        align-items: center;
+    }
 }
