--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,14 +2,19 @@
     width: 20rem;
 }
 
+.navbar__nav {
+    flex-grow: 1;
+}
+
 @media only screen and (max-width: 768px) {
     .navbar {
         position: sticky;
         top: 0;
-        box-shadow: 0 0 4px 4px black;
+        box-shadow: 0 0 4px #444444;
     }
 }
 
+/* position: sticky => default => relative, moving => fixed */
 @media only screen and (max-width: 992px) {
     .navbar__search-box {
         order: 1;
@@ -18,5 +23,9 @@
 
     .navbar__logo {
         order: 2;
+    }
+
+    .navbar__nav {
+        flex-grow: 0;
     }
 }
